@@ -247,12 +247,12 @@ property.</p>
 
 <h3><a name="part07">7. Access logging</a></h3>
 <p>Being able to properly log the activity of a Web application is a
-common requirement. Restlet Applications and Containers have built-in
-support for logging that knows how to generate Apache-like logs. By
-taking advantage of the logging facility built in the JDK, the logger
-can be configured like any standard JDK log to filter messages, reformat
-them and specify where to send them. Rotation of logs is also supported;
-see the <a
+common requirement. Restlet Applications and Components know by default
+how to generate Apache-like logs or even custom ones. By taking
+advantage of the logging facility built in the JDK, the logger can be
+configured like any standard JDK log to filter messages, reformat them
+or specify where to send them. Rotation of logs is also supported; see
+the <a
 	href="http://java.sun.com/j2se/1.5.0/docs/api/java/util/logging/package-summary.html">java.util.logging</a>
 package for details.</p>
 <p>Note that you can customize the logger name given to the
@@ -270,11 +270,11 @@ LogManager</a> class.</p>
 <p>Another common requirement is the ability to customize the status
 pages returned when something didn't go as expected during the call
 handling. Maybe a resource was not found or an acceptable representation
-isn't available? In this case, or when any unhandled exception must be
-intercepted, the Application or the Container will automatically provide
+isn't available? In this case, or when any unhandled exception is be
+intercepted, the Application or the Component will automatically provide
 a default status page for you. This service is associated to the
 org.restlet.util.StatusService class, which is accessible as an
-Application and Container property called "statusService".</p>
+Application and Component property called "statusService".</p>
 <p>In order to customize the default messages, you will simply need
 to create a subclass of StatusService and override the
 getRepresentation(Status, Request, Response) method. Then just set an
