@@ -52,7 +52,7 @@ public class Part11 implements Constants {
                 // Attach a guard to secure access to the directory
                 Guard guard = new Guard(getContext(),
                         ChallengeScheme.HTTP_BASIC, "Restlet tutorial");
-                guard.getAuthorizations().put("scott", "tiger");
+                guard.getSecrets().put("scott", "tiger");
                 router.attach("/docs/", guard);
 
                 // Create a directory able to expose a hierarchy of files
